--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xotic750/color",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "Color conversion and manipulation library",
   "homepage": "https://github.com/Xotic750/color",
   "author": {
@@ -19,6 +19,7 @@
   ],
   "module": "dist/color.esm.js",
   "main": "dist/color.js",
+  "jsdelivr": "dist/color.min.js",
   "scripts": {
     "build:esm": "mkdirp dist && babel -s true --env-name esm src/color.js -o dist/color.esm.js",
     "build:base": "webpack --bail --progress --profile --colors",
@@ -86,7 +87,7 @@
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.13.6",
-    "eslint-plugin-jsdoc": "^15.7.1",
+    "eslint-plugin-jsdoc": "^15.7.2",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-lodash": "^5.1.0",
     "eslint-plugin-no-use-extend-native": "^0.4.1",
