--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xotic750/color",
-  "version": "1.0.16",
+  "version": "1.1.0",
   "description": "Color conversion and manipulation library",
   "homepage": "https://github.com/Xotic750/color",
   "author": {
@@ -48,9 +48,32 @@
     "url": "https://github.com/Xotic750/color/issues"
   },
   "dependencies": {
+    "array-for-each-x": "^3.1.0",
+    "array-includes-x": "^3.1.0",
+    "array-map-x": "^3.1.0",
+    "array-reduce-x": "^3.1.0",
+    "array-slice-x": "^4.2.0",
+    "bind-x": "^4.1.0",
     "color-convert": "^2.0.0",
     "color-string": "^1.5.3",
-    "lodash": "^4.17.15"
+    "has-own-property-x": "^4.1.0",
+    "index-of-x": "^3.1.0",
+    "is-array-x": "^2.1.0",
+    "is-length-x": "^3.2.0",
+    "is-nil-x": "^2.1.0",
+    "math-clamp-x": "^3.2.0",
+    "object-create-x": "^3.1.0",
+    "object-define-properties-x": "^5.1.0",
+    "object-keys-x": "^3.1.0",
+    "rename-function-x": "^1.1.0",
+    "stable": "^0.1.8",
+    "symbol-species-x": "^1.1.0",
+    "to-boolean-x": "^2.1.0",
+    "to-number-x": "^3.2.0",
+    "trim-x": "^4.1.0",
+    "to-length-x": "^4.2.0",
+    "assert-is-function-x": "^3.1.0",
+    "assert-is-object-x": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -63,7 +86,7 @@
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
     "@types/webpack": "^4.32.1",
-    "@xotic750/eslint-config-recommended": "^1.1.1",
+    "@xotic750/eslint-config-recommended": "^1.1.2",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
@@ -81,7 +104,7 @@
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.15.0",
+    "eslint-plugin-jest": "^22.15.1",
     "eslint-plugin-jsdoc": "^15.8.0",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-lodash": "^6.0.0",
@@ -94,6 +117,7 @@
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "jest-file": "^1.0.0",
+    "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.5",
     "mkdirp": "^0.5.1",
     "nodemon": "^1.19.1",
