--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xotic750/color",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Color conversion and manipulation library",
   "homepage": "https://github.com/Xotic750/color",
   "author": {
@@ -67,13 +67,11 @@
     "object-keys-x": "^3.1.0",
     "rename-function-x": "^1.1.0",
     "stable": "^0.1.8",
-    "symbol-species-x": "^1.1.0",
     "to-boolean-x": "^2.1.0",
     "to-number-x": "^3.2.0",
     "trim-x": "^4.1.0",
     "to-length-x": "^4.2.0",
-    "assert-is-function-x": "^3.1.0",
-    "assert-is-object-x": "^3.1.0"
+    "assert-is-function-x": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
