--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "array-map-x": "^3.1.0",
     "array-reduce-x": "^3.1.0",
     "array-slice-x": "^4.2.0",
+    "assert-is-function-x": "^3.1.0",
     "bind-x": "^4.1.0",
     "color-convert": "^2.0.0",
     "color-string": "^1.5.3",
@@ -64,14 +65,14 @@
     "math-clamp-x": "^3.2.0",
     "object-create-x": "^3.1.0",
     "object-define-properties-x": "^5.1.0",
+    "object-freeze-x": "^1.0.0",
     "object-keys-x": "^3.1.0",
     "rename-function-x": "^1.1.0",
     "stable": "^0.1.8",
     "to-boolean-x": "^2.1.0",
-    "to-number-x": "^3.2.0",
-    "trim-x": "^4.1.0",
     "to-length-x": "^4.2.0",
-    "assert-is-function-x": "^3.1.0"
+    "to-number-x": "^3.2.0",
+    "trim-x": "^4.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -82,7 +83,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "@types/jest": "^24.0.17",
-    "@types/node": "^12.7.1",
+    "@types/node": "^12.7.2",
     "@types/webpack": "^4.32.1",
     "@xotic750/eslint-config-recommended": "^1.1.2",
     "babel-core": "^7.0.0-0",
@@ -120,12 +121,12 @@
     "mkdirp": "^0.5.1",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
-    "rimraf": "^2.6.3",
+    "rimraf": "^3.0.0",
     "source-map-loader": "^0.2.4",
     "strip-ansi": "^5.2.0",
     "terser-webpack-plugin": "^1.4.1",
     "typescript": "^3.5.3",
-    "webpack": "^4.39.1",
+    "webpack": "^4.39.2",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.6",
     "webpack-global-object-x": "^1.0.0",
