--- a/package.json
+++ b/package.json
@@ -54,9 +54,8 @@
     "array-reduce-x": "^3.1.0",
     "array-slice-x": "^4.2.0",
     "assert-is-function-x": "^3.1.0",
-    "bind-x": "^4.1.0",
     "cast-array-x": "^1.0.0",
-    "color-convert": "^2.0.0",
+    "color-convert": "^2.0.1",
     "color-string": "^1.5.3",
     "has-own-property-x": "^4.1.0",
     "index-of-x": "^3.1.0",
@@ -69,6 +68,8 @@
     "object-freeze-x": "^1.0.0",
     "object-keys-x": "^3.1.0",
     "rename-function-x": "^1.1.0",
+    "simple-bind-x": "^1.0.1",
+    "simple-methodize-x": "^1.0.2",
     "stable": "^0.1.8",
     "to-boolean-x": "^2.1.0",
     "to-length-x": "^4.2.0",
